# chatbot_suqi

./: .env  index.html  package-lock.json  package.json
backend/: .env  fly.toml  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
src/: App.tsx  env.d.ts  main.tsx
src/components/: MessageList.tsx
src/context/: ConversationContext.tsx
src/services/: ai-service.ts
src/types/: conversation.ts  network.d.ts  speech.d.ts
src/utils/: audioUtils.ts  networkStatus.ts  silenceDetector.ts  speechRecognition.ts  textToSpeech.ts
